feat(rootselector): add title label

--- a/frmb_gui/resources/stylesheets/main.css.jinja2
+++ b/frmb_gui/resources/stylesheets/main.css.jinja2
@@ -315,6 +315,10 @@ QFrame.MainControlBarWidget {
     border-bottom-right-radius: {{ layer.border_radius.default }};
     padding: {{ spacing.large }};
 }
+QFrame.MainControlBarWidget QLabel {
+    color: {{ text.color.secondary }};
+    font-size: {{ text.size.small }};
+}
 QFrame.AppTitleWidget {
     background-color: {{ layer.color.intermediate_lo }};
     border-style: solid;
