refacto(rootselector): better QMessageBox
the classmethod used previously didn't produce a widget that was stylable using stylesheet

--- a/frmb_gui/resources/stylesheets/main.css.jinja2
+++ b/frmb_gui/resources/stylesheets/main.css.jinja2
@@ -37,6 +37,13 @@ QDialog QLabel[htmltag="h1"] {
     font-weight: {{ text.weight.h1 }};
     margin-bottom: {{ spacing.large }};
 }
+/*QMessageBox*/
+QMessageBox QFrame {
+    padding: {{ spacing.normal }};
+}
+QMessageBox QLabel {
+    qproperty-alignment: AlignCenter;
+}
 
 /*QPushButton*/
 QPushButton {
