--- a/frmb_gui/resources/stylesheets/main.css.jinja2
+++ b/frmb_gui/resources/stylesheets/main.css.jinja2
@@ -312,6 +312,37 @@ QScrollBar::right-arrow {
     background-position: center;
 }
 
+{% set SwitchButtonWidth = 50 %}
+{% set SwitchButtonHeight = 25 %}
+QWidget.SwitchButton {
+    background-color: {{ layer.color.high }};
+    max-width: {{ SwitchButtonWidth }}px;
+    min-height: {{ SwitchButtonHeight }}px;
+    border-radius: {{ SwitchButtonHeight/2.2 }}px;
+    margin-top: {{ spacing.small }};
+}
+QWidget.SwitchButton:disabled {
+    background-color: {{ layer.color.low }};
+}
+QWidget.SwitchButton:checked {
+    background-color: {{ layer.color.accent }};
+}
+QWidget.SwitchButton::item {
+    background-color: {{ layer.color.low }};
+    border-radius: {{ (SwitchButtonHeight/2 + 6)//2 }}px;
+    min-width: {{ SwitchButtonHeight/2 + 4 }}px;
+    min-height: {{ SwitchButtonHeight/2 }}px;
+    margin: 5px;
+}
+QWidget.SwitchButton::item:checked {
+    background-color: {{ layer.color.background }};
+}
+QWidget.SwitchButton::item:disabled {
+    background-color: {{ layer.color.background }};
+}
+
+
+
 /*************
   CUSTOM WIDGETS
 */
