fix(stylesheet): QPushButton less "bold"

--- a/frmb_gui/resources/stylesheets/main.css.jinja2
+++ b/frmb_gui/resources/stylesheets/main.css.jinja2
@@ -57,8 +57,8 @@ QPushButton {
     );
     /*@formatter:on*/
     color: {{ text.color.primary }};
-    font-weight: bold;
-    border: 2px solid;
+    font-weight: 400;
+    border: 1px solid;
     border-color: {{ layer.color.high }};
     border-radius: {{ layer.border_radius.small }};
     padding: {{ spacing.normal }}
