refacto(style): change application fonts
we cannot bundle Segoe UI because of its licensing, so we provide a fallback font in case it's not there

--- a/frmb_gui/resources/stylesheets/main.css.jinja2
+++ b/frmb_gui/resources/stylesheets/main.css.jinja2
@@ -1,6 +1,7 @@
 QWidget, QObject {
-    font-family: {{ text.family.default }};
+    font-family: {{ text.family.default }}, {{ text.family.default_fallback }};
     font-size: {{ text.size.default }};
+    font-weight: {{ text.weight.default }};
 }
 
 /*************
