feat(basedialog): improve buttons styling

--- a/frmb_gui/resources/stylesheets/main.css.jinja2
+++ b/frmb_gui/resources/stylesheets/main.css.jinja2
@@ -654,6 +654,10 @@ QFrame.BaseDialogFrame {
     border-radius: {{ layer.border_radius.default }};
     background-color: {{ layer.color.background }};
 }
+QFrame.BaseDialogFrame > QPushButton {
+    margin: {{ spacing.small }};
+    margin-bottom: unset;
+}
 
 QDialog.MenuDeleterDialog QFrame.BaseDialogFrame {
     border-color: {{ layer.color.danger }};
