fix(stylesheet): MenuDeleterWidget selector
introduced in eff586563026138574493ce10214ad9629ff7f73

--- a/frmb_gui/resources/stylesheets/main.css.jinja2
+++ b/frmb_gui/resources/stylesheets/main.css.jinja2
@@ -663,13 +663,13 @@ QDialog.MenuDeleterDialog QFrame.BaseDialogFrame {
     border-color: {{ layer.color.danger }};
 }
 
-QFrame.MenuDeleterWidget QWidget.StylesheetIcon[icon-name="trashbin"] {
+QWidget.MenuDeleterWidget QWidget.StylesheetIcon[icon-name="trashbin"] {
     min-width: 32px;
     min-height: 32px;
     max-width: 32px;
     max-height: 32px;
 }
-QFrame.MenuDeleterWidget QListWidget {
+QWidget.MenuDeleterWidget QListWidget {
     background-color: {{ layer.color.intermediate }};
     color: {{ text.color.secondary }};
     font-family: {{ text.family.monospace }};
